cmake_minimum_required(VERSION 3.20)
project(XDP_Socket)

set(BUILD_DIR ${CMAKE_BINARY_DIR}/build)
set(BINARY_DIR ${BUILD_DIR}/bin)
set(FLAT_BINARY_DIR ${BUILD_DIR}/flat_bin)
set(DLL_DIR ${BUILD_DIR}/dll)
set(LIBRARY_DIR ${BUILD_DIR}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${DLL_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_DIR})

file(MAKE_DIRECTORY ${BINARY_DIR})
file(MAKE_DIRECTORY ${FLAT_BINARY_DIR})
file(MAKE_DIRECTORY ${DLL_DIR})
file(MAKE_DIRECTORY ${LIBRARY_DIR})


add_subdirectory(kernel_program)
add_executable(xdp_socket
        main.cpp)